tests/fixtures/invalid/pow_bool_none_bool.py
# Cannot call pow() with Bool, None, Bool
x = pow(True, None, True)
